adding some new strings related to calendar email notifications

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">لون شفاف</string>
     <string name="select_a_different_color">إختر لون مختلف</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">المفضلة</string>
