--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Transparent farve</string>
     <string name="select_a_different_color">Vælg en anden farve</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
