--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Couleur transparente</string>
     <string name="select_a_different_color">Sélectionnez une couleur différente</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
