--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Colore trasparente</string>
     <string name="select_a_different_color">Seleziona un colore diverso</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
