--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">透過色</string>
     <string name="select_a_different_color">別の色を選択する</string>
     <string name="download">ダウンロード</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
