--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Transparante kleur</string>
     <string name="select_a_different_color">Kies een andere kleur</string>
     <string name="download">Downloaden</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
