--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Prezroczysty kolor</string>
     <string name="select_a_different_color">Wybierz inny kolor</string>
     <string name="download">Pobierz</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Ulubione</string>
