--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Колір прозорості</string>
     <string name="select_a_different_color">Обрати інший колір</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Улюблене</string>
