--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">透明颜色</string>
     <string name="select_a_different_color">选择一个不同的颜色</string>
     <string name="download">下载</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">收藏</string>
