--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Color transparente</string>
     <string name="select_a_different_color">Seleccionar un color diferente</string>
     <string name="download">Descarga</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
