--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Warna transparan</string>
     <string name="select_a_different_color">Pilih warna berbeda</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorit</string>
