--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Transparent color</string>
     <string name="select_a_different_color">Select a different color</string>
     <string name="download">Download</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorites</string>
