--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Cor transparente</string>
     <string name="select_a_different_color">Selecione uma cor diferente</string>
     <string name="download">Descarregar</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
