--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Priesvitná farba</string>
     <string name="select_a_different_color">Zvoliť inú farbu</string>
     <string name="download">Stiahnuť</string>
+    <string name="notification">Pripomienka</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
