--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -23,7 +23,7 @@
     <string name="transparent_color">Χρώμα διαφάνειας</string>
     <string name="select_a_different_color">Επιλέξτε διαφορετικό χρώμα</string>
     <string name="download">Λήψη</string>
-    <string name="notification">Notification</string>
+    <string name="notification">Ειδοποιήσεις</string>
     <string name="email">Email</string>
 
     <!-- Favorites -->
@@ -243,7 +243,7 @@
     <string name="move_to_recycle_bin_confirmation">Είστε βέβαιοι ότι θέλετε να μετακινήσετε %s στον κάδο ανακύκλωσης?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
     <string name="are_you_sure_delete">Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτό το στοιχείο?</string>
     <string name="are_you_sure_recycle_bin">Είστε βέβαιοι ότι θέλετε να μετακινήσετε αυτό το στοιχείο στον κάδο ανακύκλωσης?</string>
-    <string name="do_not_ask_again">Μην ξαναρωτήσετε σε αυτήν την περίοδο</string>
+    <string name="do_not_ask_again">Μην ξαναερωτηθώ αυτήν την περίοδο</string>
     <string name="yes">Ναί</string>
     <string name="no">Όχι</string>
 
