--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -23,8 +23,8 @@
     <string name="transparent_color">Прозрачный цвет</string>
     <string name="select_a_different_color">Выберите другой цвет</string>
     <string name="download">Загрузка</string>
-    <string name="notification">Notification</string>
-    <string name="email">Email</string>
+    <string name="notification">Уведомление</string>
+    <string name="email">Электронная почта</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
